--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,3 @@
-chair_forbidden = Chair unavialiable...
+chair_forbidden = Chair unavailable...
+reservation_delete_not_found = Reservation with given id not found
+reservation_deleted = Reservation deleted.
