--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,1 +1,3 @@
-chair_forbidden = Krzes\u0142o nidost\u0119pne
+chair_forbidden = Krzes\u0142o nidost\u0119pne.
+reservation_delete_not_found = Nie znaleziono rezerwacji o podanym id.
+reservation_deleted = Rezerwazja zosta\u0142a usuni\u0119ta.
