--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,8 @@
-chair_forbidden = Chair unavailable...
-reservation_delete_not_found = Reservation with given id not found
+seat_forbidden = Seat unavailable...
+reservation_delete_not_found = Reservation with given id not found.
 reservation_deleted = Reservation deleted.
 reservation_post_succesful = Reservation has been made.
+reservation_post_constraint_violation = Seat is already taken.
+seat_not_found = Could not found seat with given parameters.
+user_has_already_reserved_for_this_building = User already reserved seat in this building.
+starting_date_after_ending_date = Dates are not in chronological order.
