--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,3 +1,8 @@
-chair_forbidden = Krzes\u0142o nidost\u0119pne.
+seat_forbidden = Miejsce nidost\u0119pne.
 reservation_delete_not_found = Nie znaleziono rezerwacji o podanym id.
 reservation_deleted = Rezerwazja zosta\u0142a usuni\u0119ta.
+reservation_post_succesful = Rezerwacja zosta\u0142\u0105 zatwierdzona
+reservation_post_constraint_violation = Miejsce ju\u017C zaj\u0119te
+seat_not_found = Nie znaleziono miejsca o podanych parametrach
+user_has_already_reserved_for_this_building = U\u017Cytkownik zarezerwowa\u0142 ju\u017C miejsce w podanym biurze.
+starting_date_after_ending_date = Daty nie s\u0105 w kolejno\u015Bci chronologicznej.
